--- a/capping/templates/index.html
+++ b/capping/templates/index.html
@@ -1,9 +1,17 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
+    <script src="{{ STATIC_URL }}js/controllers.js"></script>
     <script src="{{ STATIC_URL }}js/app.js"></script>
  </head>
-  <body>
+  <body ng-app="cappingApp">
     Hello World!
+    <div ng-controller="MainCtrl">
+      Controller
+      {% verbatim angular %}
+      {{test}}
+      {% endverbatim angular %}
+    </div>
   </body>
 </html>
