--- a/capping/templates/index.html
+++ b/capping/templates/index.html
@@ -4,43 +4,35 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
     <script src="{{ STATIC_URL }}js/controllers.js"></script>
     <script src="{{ STATIC_URL }}js/app.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/capping.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
  </head>
   <body ng-app="cappingApp">
-    <b>Random Courses</b>
+    <b>Selecting Classes Demo</b><br><br>
     <div ng-controller="MainCtrl">
-      Within Controller <br><br>
       {% verbatim angular %}
-      <div>External Courses:</div>
-      <table border="1">
-        <tr>
-          <td>Subject</td>
-          <td>Number</td>
-          <td>Title</td>
-        </tr>
-        <tr ng-repeat="course in externalCourses">
-          <td>{{course.subject}}</td>
-          <td>{{course.number}}</td>
-          <td>{{course.title}}</td>
-        </tr>
-      </table>
+      <div ng-class="entry-container" ng-repeat="entry in entries">
+      >
+        <div class="selection">
+          Subject:
+          <select ng-model="entry.selectedSubject" ng-change="entry.subjectChange()">
+            <option ng-repeat="sub in entry.subjects">{{sub}}</option>
+          </select>
+        </div>
+        <div class="selection">
+          Number:
+          <select>
+            <option ng-repeat="num in entry.numberList">{{num}}</option>
+          </select>
+        </div>
+        <br>
+        <br>
+      </div>
       <br>
-      <div>Internal Courses:</div>
-      <table border="1">
-        <tr>
-          <td>Subject</td>
-          <td>Number</td>
-          <td>Title</td>
-        </tr>
-        <tr ng-repeat="course in internalCourses">
-          <td>{{course.subject}}</td>
-          <td>{{course.number}}</td>
-          <td>{{course.title}}</td>
-        </tr>
-      </table>
-      {% endverbatim angular %}
-      <br>
-      <button ng-click="getAnotherCourse()">Get More Courses</button>
+      <button ng-click="addEntry()">Add Entry</button>
     </div>
-    Out of Controller
+    {% endverbatim angular %}
   </body>
 </html>
