--- a/capping/templates/index.html
+++ b/capping/templates/index.html
@@ -2,52 +2,18 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
-    <script src="{{ STATIC_URL }}js/controllers.js"></script>
-    <script src="{{ STATIC_URL }}js/app.js"></script>
+    <script src="../static/js/app.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/capping.css">
+    <link rel="stylesheet" href="../static/css/capping.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
  </head>
-  <body ng-app="cappingApp">
-    <b>Selecting Classes Demo</b><br><br>
-    <div ng-controller="MainCtrl">
-      {% verbatim angular %}
-      <div ng-class="entry-container" ng-repeat="entry in entries">
-      >
-        <div class="selection">
-          Subject:
-          <select ng-model="entry.selectedSubject" ng-change="entry.subjectChange()">
-            <option ng-repeat="sub in entry.subjects">{{sub}}</option>
-          </select>
-        </div>
-        <div class="selection">
-          Number:
-          <select ng-model="entry.selectedNumber" ng-change="entry.numberChange()">
-            <option ng-repeat="num in entry.numberList">{{num}}</option>
-          </select>
-        </div>
-        <div class="selection">
-          Marist Options:
-          <select ng-model="entry.selectedMaristCourse">
-            <option ng-repeat="course in entry.maristCourseList">{{course}}</option>
-          </select>
-        </div>
-        <br>
-        <br>
-      </div>
-      <br>
-      <button ng-click="addEntry()">Add Entry</button>
-      <br><br><br>
-      <div><b>Major Requirements Demo</b></div>
-      <div class="majors">
-        Major:
-        <select ng-model="selectedMajor" ng-change="majorChanged()">
-          <option ng-repeat="major in majors">{{major}}</option>
-        </select>
-        <div ng-repeat="req in requirements" class="requirement-{{req.fulfilled}}">{{req.name}}</div>
-      </div>
-    </div>
-    {% endverbatim angular %}
+  <body>
+  <div ng-app="cappingApp" ng-controller="mainCtrl" ng-init="init()">
+    <p>Majors<br>
+      <select ng-model="cmbMajor" ng-change="majorChanged()">
+        <option ng-repeat="major in majors">{{major}}</option>
+      </select>
+  </div>
   </body>
 </html>
