PDF generation working

--- a/capping/templates/index.html
+++ b/capping/templates/index.html
@@ -72,7 +72,7 @@
       </div>
 
       <div id="generateReportDiv">
-        <button ng-click="console.log('lol')" class="btn btn-default">Generate Report</button>
+        <button ng-click="generateReport()" class="btn btn-default">Generate Report</button>
       </div>
 
     </div>
