--- a/capping/static/css/capping.css
+++ b/capping/static/css/capping.css
@@ -19,3 +19,10 @@
   padding: 50px 0 100px 0;
   margin: auto 5px;
 }
+
+.page-header{
+	padding-bottom:17px;
+	margin:18px 0;
+	border-bottom:4px solid #e4183e;
+}
+
