Added some more color

--- a/capping/templates/index.html
+++ b/capping/templates/index.html
@@ -84,8 +84,8 @@
 
       </div>
       <div class="row">
-        <div class="col-md-3">
-        <h3>List Requirements</h3>
+        <div class="col-md-4">
+        <h3><font color="#b31b1b">List Requirements</font></h3>
         <span ng-repeat="oli in oflistitems">
           Choose {{oli.number_selected}} of the following - Completed: {{oli.completed}}
           <table class="table table-striped ">
@@ -99,8 +99,8 @@
         </div>
       </div>
       <div class = "row">
-        <div class = "col-md-3"> 
-        <h3>Set Requirements</h3>
+        <div class = "col-md-4"> 
+        <h3><font color="#b31b1b">Set Requirements</font></h3>
         <span ng-repeat="osi in ofsetitems">
           Choose {{osi.number_selected}} of each set - Completed: {{osi.completed}}
           <span ng-repeat="crs in osi.coursereqsets">
