removed completed section for sets

--- a/capping/templates/index.html
+++ b/capping/templates/index.html
@@ -103,7 +103,7 @@
         <div class = "col-md-4">
         <h3><font color="#b31b1b">Set Requirements</font></h3>
         <span ng-repeat="osi in ofsetitems">
-          Choose {{osi.number_selected}} of each set - Completed: {{osi.completed}}
+          Choose {{osi.number_selected}} of each set
           <span ng-repeat="crs in osi.coursereqsets">
             <table class="table table-striped ">
               <tr><th>Course</th><th>Fulfilled</th></tr>
