Select a Major looks nice

--- a/capping/templates/index.html
+++ b/capping/templates/index.html
@@ -92,7 +92,7 @@
     <br>
     <p>
       <h2>Select a Major</h2>
-      <select ng-model="cmbMajor" ng-change="majorChanged()" >
+      <select ng-model="cmbMajor" ng-change="majorChanged()" class="form-control">
         <option ng-repeat="major in majors">{{major}}</option>
       </select>
     </p>
