fixed any merge issues

--- a/capping/templates/index.html
+++ b/capping/templates/index.html
@@ -14,25 +14,23 @@
       });
     </script>
   </head>
-  <body ng-app="cappingApp">
+  <body ng-app="cappingApp" ng-controller="MainCtrl">
     <div class="container">
       <img src="{{ STATIC_URL }}Seal Red75.png" class="center-block"/>
-
-
       <div>
-	<div class="btn-toolbar pull-right">
-	  <div class="btn-group">
-	    <div>
+        <div class="btn-toolbar pull-right">
+          <div class="btn-group">
+            <div>
               <button ng-click="toggleLogin()" class="btn btn-default btn-lg" ng-if="!user">Login</button>
               <button ng-click="logout()" class="btn btn-default btn-lg" ng-if="user">Logout</button>
-	    </div>
-	  </div>
-	</div>
-      <h1 class="page-header">Transfer Credit Evaluation</h1>
+            </div>
+          </div>
+        </div>
+        <h1 class="page-header">Transfer Credit Evaluation</h1>
       </div>
     </div>
 
-    <div class="container" ng-controller="MainCtrl">
+    <div class="container">
 
       {% verbatim angular %}
       <modal title="Please Login" visible="showLogin">
